--- a/MemeGenerator/Base.lproj/Main.storyboard
+++ b/MemeGenerator/Base.lproj/Main.storyboard
@@ -1,14 +1,19 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11134" systemVersion="15F34" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<?xml version="1.0" encoding="UTF-8"?>
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="11762" systemVersion="16C67" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+    <device id="retina4_7" orientation="portrait">
+        <adaptation id="fullscreen"/>
+    </device>
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11106"/>
+        <deployment identifier="iOS"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="11757"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Meme Editor View Controller-->
         <scene sceneID="tne-QT-ifu">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
+                <viewController id="BYZ-38-t0r" customClass="MemeEditorViewController" customModule="MemeGenerator" customModuleProvider="target" sceneMemberID="viewController">
                     <layoutGuides>
                         <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
                         <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
@@ -16,11 +21,108 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView opaque="NO" clearsContextBeforeDrawing="NO" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="dqa-Dd-SuD">
+                                <rect key="frame" x="16" y="64" width="343" height="559"/>
+                            </imageView>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleAspectFit" translatesAutoresizingMaskIntoConstraints="NO" id="bJ8-dr-eOh" userLabel="Bottom Toolbar">
+                                <rect key="frame" x="0.0" y="623" width="375" height="44"/>
+                                <items>
+                                    <barButtonItem title="Album" width="70.5" id="uAA-Be-a47">
+                                        <connections>
+                                            <action selector="imagePicker:" destination="BYZ-38-t0r" id="ebr-0x-yK8"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="AFa-7E-yk1"/>
+                                    <barButtonItem image="slr_camera-50" width="70.5" id="NXK-s7-lHO">
+                                        <connections>
+                                            <action selector="pickAnImageFromCamera:" destination="BYZ-38-t0r" id="z9w-1x-AHJ"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="TJE-oU-6LC"/>
+                                </items>
+                            </toolbar>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="center" contentHorizontalAlignment="center" contentVerticalAlignment="center" usesAttributedText="YES" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="nts-uW-Zjm">
+                                <rect key="frame" x="16" y="553" width="343" height="30"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="BOTTOM">
+                                        <attributes>
+                                            <font key="NSFont" metaFont="system" size="25"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Mgm-Hy-Ntr" userLabel="Top Toolbar">
+                                <rect key="frame" x="-4" y="20" width="383" height="44"/>
+                                <items>
+                                    <barButtonItem enabled="NO" image="upload-32" width="58" id="NIN-9l-Nke">
+                                        <connections>
+                                            <action selector="shareButton:" destination="BYZ-38-t0r" id="e3k-My-KI9"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="F28-9p-UGL"/>
+                                    <barButtonItem title="Cancel" width="55" id="tQQ-JD-E9d">
+                                        <connections>
+                                            <action selector="cancelButton:" destination="BYZ-38-t0r" id="wFI-V3-rZv"/>
+                                        </connections>
+                                    </barButtonItem>
+                                </items>
+                            </toolbar>
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="center" preservesSuperviewLayoutMargins="YES" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" minimumFontSize="25" translatesAutoresizingMaskIntoConstraints="NO" id="Egu-Ct-l0p">
+                                <rect key="frame" x="16" y="114" width="343" height="30"/>
+                                <attributedString key="attributedText">
+                                    <fragment content="TOP">
+                                        <attributes>
+                                            <font key="NSFont" metaFont="system" size="25"/>
+                                            <paragraphStyle key="NSParagraphStyle" alignment="center" lineBreakMode="wordWrapping" baseWritingDirection="natural" tighteningFactorForTruncation="0.0"/>
+                                        </attributes>
+                                    </fragment>
+                                </attributedString>
+                                <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
+                            </textField>
+                        </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstAttribute="trailingMargin" secondItem="Mgm-Hy-Ntr" secondAttribute="trailing" constant="-20" id="0MI-VF-w4j"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="dqa-Dd-SuD" secondAttribute="leading" id="3Z6-NH-atl"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="nts-uW-Zjm" secondAttribute="trailing" id="8YR-Sh-KQ1"/>
+                            <constraint firstItem="Mgm-Hy-Ntr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="A1O-2G-Ttj"/>
+                            <constraint firstItem="bJ8-dr-eOh" firstAttribute="top" secondItem="dqa-Dd-SuD" secondAttribute="bottom" id="G5U-g8-H2F"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="Egu-Ct-l0p" secondAttribute="leading" id="Ivz-8g-ozA"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Egu-Ct-l0p" secondAttribute="trailing" id="OZL-u6-xsh"/>
+                            <constraint firstItem="dqa-Dd-SuD" firstAttribute="top" secondItem="Egu-Ct-l0p" secondAttribute="bottom" constant="-80" id="Pc4-hp-pK1"/>
+                            <constraint firstItem="bJ8-dr-eOh" firstAttribute="top" secondItem="nts-uW-Zjm" secondAttribute="bottom" constant="40" id="Qza-Sa-DkK"/>
+                            <constraint firstItem="Mgm-Hy-Ntr" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="SWF-Cg-87I"/>
+                            <constraint firstItem="dqa-Dd-SuD" firstAttribute="top" secondItem="Mgm-Hy-Ntr" secondAttribute="bottom" id="UNr-ri-3Yw"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="nts-uW-Zjm" secondAttribute="leading" id="aID-qJ-R3W"/>
+                            <constraint firstAttribute="trailing" secondItem="bJ8-dr-eOh" secondAttribute="trailing" id="h0Z-LV-M54"/>
+                            <constraint firstAttribute="leadingMargin" secondItem="Egu-Ct-l0p" secondAttribute="leading" id="hjR-bH-aSn"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="dqa-Dd-SuD" secondAttribute="trailing" id="mDz-pM-OTp"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="Egu-Ct-l0p" secondAttribute="trailing" id="nJ1-C5-xGs"/>
+                            <constraint firstItem="bJ8-dr-eOh" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leading" id="tZ2-5b-jWW"/>
+                            <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="bJ8-dr-eOh" secondAttribute="bottom" id="vlS-Ol-txd"/>
+                        </constraints>
                     </view>
+                    <connections>
+                        <outlet property="bottomTextFieldEditor" destination="nts-uW-Zjm" id="8MT-lv-NmF"/>
+                        <outlet property="bottomToolbar" destination="bJ8-dr-eOh" id="vL1-3W-Nep"/>
+                        <outlet property="cameraButton" destination="NXK-s7-lHO" id="L9w-Ig-Ys9"/>
+                        <outlet property="cancelOutlet" destination="tQQ-JD-E9d" id="BSk-Uu-1E1"/>
+                        <outlet property="imageViewer" destination="dqa-Dd-SuD" id="ya7-o8-5eI"/>
+                        <outlet property="shareOutlet" destination="NIN-9l-Nke" id="S8R-q0-qmE"/>
+                        <outlet property="topTextFieldEditor" destination="Egu-Ct-l0p" id="Gq6-cS-fsl"/>
+                        <outlet property="topToolbar" destination="Mgm-Hy-Ntr" id="gbu-XP-kKc"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="130.40000000000001" y="135.38230884557723"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="slr_camera-50" width="25" height="25"/>
+        <image name="upload-32" width="37" height="37"/>
+    </resources>
 </document>
